col for welcome

--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -36,6 +36,13 @@
         border-bottom-left-radius: 50px 50px;
     }
 }
+@media screen and (max-width: 980px) {
+.welcome{
+    .welcome-block-img{
+        display: none;
+    }
+}
+}
 
 #about{
     padding-top: 150px;
@@ -104,4 +111,8 @@
             display: none;
         }
     }
+}
+
+@media screen and (max-width: 980px) {
+
 }
