--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -131,3 +131,56 @@
         }
     }
 }
+
+#collection{
+    padding-top: 150px;
+    .collection-title{
+        @include font('Rubik', normal, 500, 48px, 57px);
+    }
+    .collection-subtitle{
+        @include font('Rubik', normal, 400, 16px, 19px);
+        margin-bottom: 60px;
+    }
+
+    .collection-list{
+        justify-content: space-around;
+        list-style-type: none;
+        &--item{
+            width: 16%;
+            padding: 10px;
+            display: flex;
+            justify-content: center;
+            img{
+                height: 590px;
+                margin: 0;
+                margin-bottom: 30px;
+            }
+            span{
+                @include font('Rubik', normal, 400, 18px, 24px);
+                color: $green-text-color;
+                border: 2px solid $green-text-color;
+                border-top-right-radius: 15px;
+                border-bottom-left-radius: 15px;
+                padding: 5px 0px;
+            }
+        }
+    }
+}
+@media screen and (max-width: 768px) {
+    .collection-list{
+        justify-content: space-around;
+        list-style-type: none;
+        flex-wrap: wrap;
+        &--item{
+            width: 33% !important;
+            img{
+                height: 300px !important;
+                margin-bottom: 15px !important; 
+            }
+            span{
+                padding: 0px 7px !important;
+                width: 100%;
+            }
+        }
+    }
+}
