--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -200,7 +200,7 @@
     }
     .map-wrapper{
         @include centering;
-        height: 300px;
+        
     }
 }
 
@@ -252,6 +252,95 @@
             &--title{
                 text-align: center;
             }
+        }
+    }
+}
+
+.footer{
+    padding-top: 100px;
+    .footer-wrapper{
+        margin-bottom: 70px;
+    }
+    .logo{
+        margin-bottom: 10px;
+        img{
+          margin: 0;  
+        }
+    }
+    .footer-title{
+        @include font('Rubik', normal, 600, 18px, 21px);
+    }
+    .footer-text{
+        @include font('Rubik', normal, 400, 14px, 24px);
+        color: $grey-text-color;
+    }
+    &__list{
+        list-style-type: none;
+        padding: 0;
+        &--item{
+            display: flex;
+            margin-bottom: 10px;
+            .img-wrapper{
+                @include centering;
+                background-color: $grey-bg-color;
+                width: 48px;
+                height: 48px;
+                margin-right: 12px;
+                padding: 0;
+                img{
+                    margin: 0;
+                };
+            }
+            span{
+                @include font('Rubik', normal, 400, 12px, 16px);
+                color: $grey-text-color;
+                text-align: start;
+            }
+            a{
+                @include font('Rubik', normal, 700, 16px, 21px);
+                color: $green-text-color;
+            }
+        }
+    }
+    .footer-feedback{
+        .inp-small{
+            @include font('Rubik', normal, 700, 14px, 12px);
+            height: 48px;
+            border-radius: 8px;
+            background-color: $grey-bg-color;
+            color: $grey-text-color;
+            border: none;
+            padding: 16px 24px; 
+            outline: none;
+        }
+        .inp-message{
+            @include font('Rubik', normal, 700, 14px, 12px);
+            height: 130px;
+            border-radius: 8px;
+            background-color: $grey-bg-color;
+            color: $grey-text-color;
+            border: none;
+            padding: 18px 24px; 
+            outline: none;
+        }
+        .footer-submit-btn{
+            @include font('Rubik', normal, 700, 14px, 18px);
+            height: 56px;
+            border-radius: 8px;
+            @include green-btn;
+        } 
+    }
+    .copyright{
+        @include font('Rubik', normal, 400, 14px, 17px);
+        color: $grey-text-color;
+        @include centering;
+        height: 40px;
+    }
+}   
+@media screen and (max-width: 1024px) {
+    .footer{
+        .footer-wrapper{
+            margin-bottom: 40px;
         }
     }
 }
