--- a/style.css
+++ b/style.css
@@ -2232,8 +2232,7 @@ ul.linear-list li {
     display: flex;
     align-items: center;
     display: flex;
-    justify-content: center;
-    height: 300px; }
+    justify-content: center; }
 
 #news {
   position: relative;
@@ -2287,6 +2286,112 @@ ul.linear-list li {
       margin-bottom: 30px; }
       #news .news__text-block--title {
         text-align: center; } }
+.footer {
+  padding-top: 100px; }
+  .footer .footer-wrapper {
+    margin-bottom: 70px; }
+  .footer .logo {
+    margin-bottom: 10px; }
+    .footer .logo img {
+      margin: 0; }
+  .footer .footer-title {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px; }
+  .footer .footer-text {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #9A9EA6; }
+  .footer__list {
+    list-style-type: none;
+    padding: 0; }
+    .footer__list--item {
+      display: flex;
+      margin-bottom: 10px; }
+      .footer__list--item .img-wrapper {
+        display: flex;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        background-color: #F0F1F2;
+        width: 48px;
+        height: 48px;
+        margin-right: 12px;
+        padding: 0; }
+        .footer__list--item .img-wrapper img {
+          margin: 0; }
+      .footer__list--item span {
+        font-family: "Rubik";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+        color: #9A9EA6;
+        text-align: start; }
+      .footer__list--item a {
+        font-family: "Rubik";
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 21px;
+        color: #219653; }
+  .footer .footer-feedback .inp-small {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 12px;
+    height: 48px;
+    border-radius: 8px;
+    background-color: #F0F1F2;
+    color: #9A9EA6;
+    border: none;
+    padding: 16px 24px;
+    outline: none; }
+  .footer .footer-feedback .inp-message {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 12px;
+    height: 130px;
+    border-radius: 8px;
+    background-color: #F0F1F2;
+    color: #9A9EA6;
+    border: none;
+    padding: 18px 24px;
+    outline: none; }
+  .footer .footer-feedback .footer-submit-btn {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    height: 56px;
+    border-radius: 8px;
+    background-color: #27AE60;
+    color: #FFFFFF; }
+  .footer .copyright {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #9A9EA6;
+    display: flex;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 40px; }
+
+@media screen and (max-width: 1024px) {
+  .footer .footer-wrapper {
+    margin-bottom: 40px; } }
 /**
  * ---------------------------------------------------
  * 	5.  Themes
